--- a/index.html
+++ b/index.html
@@ -105,13 +105,10 @@
         <br/>
         <br/>
         
-        
-
+        <footer class="default-primary-color">
+		    <h1>FOOTER (inside main-div)</h1>
+	    </footer>
 	</div>
-	<footer class="default-primary-color">
-		<h1>FOOTER</h1>
-	</footer>
-
 	<script type="text/javascript">
 		/*
 		localStorage.setItem("key1", "data1");
