--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
         
         <footer class="default-primary-color">
 		    <h1>FOOTER (inside main-div)</h1>
+		    <nav>
+		    	<a href="https://sczd.github.io/infynexus/">Infynexus</a>
+		    	<a href="https://www.google.es/">Google</a>
+		    	<a href="https://www.google.es/">Google</a>
+		    </nav>
 	    </footer>
 	</div>
 	<script type="text/javascript" src="js/script.js"></script>
