--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	
 </head>
 <body>
-	<header class="default-primary-color">
+	<header>
 		<div class="toolbar">
 			<div class="toolbar-left">
                 <!--
@@ -55,7 +55,7 @@
 	</header>
 	<div class="main-div">
         <div class="today-meal">
-            <div class="today-meal-title">Today's dishes</div>
+            <div class="today-meal-header">Today's dishes</div>
             <div class="today-meal-content">
                <div></div>
                <div></div>
@@ -66,7 +66,7 @@
             </div>
         </div>
 	    <div class="today-meal">
-            <div class="today-meal-title">Today's dishes</div>
+            <div class="today-meal-header">Today's dishes</div>
             <div class="today-meal-content">
                <div></div>
                <div></div>
@@ -81,7 +81,7 @@
 	    
 		<button class="mdc-button" style="display:inline-block; position: stsatic; ">Button</button>
         
-        <footer class="default-primary-color">
+        <footer>
 		    <h1>FOOTER (inside main-div)</h1>
 		    <nav>
 		    	<a href="https://sczd.github.io/infynexus/">Infynexus</a>
