--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     
     <link rel="stylesheet" href="index.css" />
     
+    <!--  -->
+	<meta name="viewport" content="width=device-width" />
 	
 </head>
 <body>
