--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <link rel="stylesheet" href="index.css" />
     
-    <!--  -->
+    <!-- RESPONSIVE -->
 	<meta name="viewport" content="width=device-width" />
 	
 </head>
