--- a/data.html
+++ b/data.html
@@ -18,6 +18,8 @@
     
     <link rel="stylesheet" href="data.css"/>
     
+    <!-- RESPONSIVE -->
+	<meta name="viewport" content="width=device-width" />
 	
 </head>
 <body>
