--- a/shop_list.html
+++ b/shop_list.html
@@ -18,6 +18,8 @@
     
     <link rel="stylesheet" href="shop_list.css"/>
     
+    <!-- RESPONSIVE -->
+	<meta name="viewport" content="width=device-width" />
 	
 </head>
 <body>
