--- a/learn.html
+++ b/learn.html
@@ -61,21 +61,21 @@
 	    <h3>Enlaces</h3>
 	    <ol>
 	    	<li><a href="https://www.udemy.com/51-fitness-nutrition-skinny-fat-health-myths-and-mistakes/">https://www.udemy.com/51-fitness-nutrition-skinny-fat-health-myths-and-mistakes/</a></li>
-			<li><a href="https://thehealthsciencesacademy.org/registration-free-starter-nutrition-course/">https://thehealthsciencesacademy.org/registration-free-starter-nutrition-course/</a></li>
+		<li><a href="https://thehealthsciencesacademy.org/registration-free-starter-nutrition-course/">https://thehealthsciencesacademy.org/registration-free-starter-nutrition-course/</a></li>
 	    	<li><a href="https://alison.com/courses/nutrition">https://alison.com/courses/nutrition</a></li>
 	    	<li><a href="https://www.edx.org/learn/nutrition">https://www.edx.org/learn/nutrition</a></li>
 	    	<li><a href="https://www.futurelearn.com/courses/the-science-of-nutrition">https://www.futurelearn.com/courses/the-science-of-nutrition</a></li>
-			<li><a href="https://www.coursera.org/browse/life-sciences/nutrition">https://www.coursera.org/browse/life-sciences/nutrition</a></li>
+		<li><a href="https://www.coursera.org/browse/life-sciences/nutrition">https://www.coursera.org/browse/life-sciences/nutrition</a></li>
 	    	<li><a href="https://www.nutrition.org.uk/online-training.html">https://www.nutrition.org.uk/online-training.html</a></li>
-			<li><a href="https://www.nutrition.org.uk/online-training.html">https://nutritioncertificationreviews.com/</a></li>
+		<li><a href="https://www.nutrition.org.uk/online-training.html">https://nutritioncertificationreviews.com/</a></li>
 	    	<li><a href="https://www.nutrition.org.uk/online-training.html">https://www.verywellfit.com/nutrition-basics-4157080</a></li>
 	    	<li><a href="https://www.nutrition.org.uk/online-training.html">https://www.nutrition.org.uk/healthyliving/basics.html</a></li>
 	    	<li><a href="https://www.nutrition.org.uk/online-training.html">https://www.unitypoint.org/livewell/article.aspx?id=060291df-8d2b-40ca-81f2-261b7168ce77</a></li>
 	    	<li><a href="https://www.futurelearn.com/courses/nutrition-wellbeing">https://www.futurelearn.com/courses/nutrition-wellbeing</a></li>
-	    	<li><a href="">https://wellbeing.google/</a></li>
-			<li><a href=""></a></li>
+	    	<li><a href="https://wellbeing.google/">https://wellbeing.google/</a></li>
+		<li><a href="https://www.buzzfeed.com/deenashanker/23-comidas-saludables-que-todos-deberian-saber-com">https://www.buzzfeed.com/deenashanker/23-comidas-saludables-que-todos-deberian-saber-com</a></li>
 	    	<li><a href=""></a></li>
-			<li><a href=""></a></li>
+		<li><a href=""></a></li>
 	    </ol>
 	    
 	    
